# PdfViewer

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/barteksc/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/barteksc/sample/: PDFViewActivity.java
app/src/main/res/menu/: options.xml
app/src/test/java/com/github/barteksc/sample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
pdfium/: CMakeLists.txt  build.gradle
pdfium/src/androidTest/java/com/aa/: ExampleInstrumentedTest.java
pdfium/src/main/: AndroidManifest.xml
pdfium/src/main/java/com/shockwave/pdfium/: PdfiumCore.java
pdfium/src/test/java/com/aa/: ExampleUnitTest.java
pdfviewer/: build.gradle
pdfviewer/src/androidTest/java/sample/barteksc/github/com/pafviewer/: ExampleInstrumentedTest.java
pdfviewer/src/main/: AndroidManifest.xml
pdfviewer/src/main/java/com/github/barteksc/pdfviewer/scroll/: DefaultScrollHandle.java
pdfviewer/src/main/res/values/: strings.xml
pdfviewer/src/test/java/sample/barteksc/github/com/pafviewer/: ExampleUnitTest.java
